<resources>
    <string name="app_name">Food Trucks PR</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="title_my_truck">My Truck</string>
    <string name="title_food">Categories</string>
    <string name="title_trucks">Search Trucks</string>
    <string name="truck_image_content_description">Image of the Food Truck</string>
    <string name="open_hours">Open Hours</string>
    <string name="phone_number">Phone</string>
    <string name="name">Food Truck Name</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add">Add</string>
    <string name="menu">Menu Items</string>
    <string name="through_char"> - </string>
    <string name="and_char"> : </string>
    <string name="opens">Opens: </string>
    <string name="closes">Closes: </string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="dollar_symbol">$</string>
    <string name="menu_item_hint">Description</string>
    <string name="price_hint">Price</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="get_directions">Get Directions</string>
    <string name="try_search">Try Searching For Something</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="add_image">Change Image</string>
    <string name="remove_truck">Delete My Truck</string>
    <string name="yes">Yes</string>
    <string name="no">Cancel</string>
    <string name="category">Category</string>
    <string name="no_trucks_available">No Food Trucks Available</string>
    <string name="not_found">No Results Found</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="categories">
        <item>Burger Joint</item>
        <item>Candy Shop</item>
        <item>"Criollo"</item>
        <item>Coffee Shop</item>
        <item>Deep Fried</item>
        <item>Mexican</item>
        <item>Pasta</item>
        <item>Pizza</item>
        <item>Sea Food</item>
    </string-array>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="apm">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="hours">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
