<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView1"
    tools:context=".MyTruckFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/foodtruck"
            android:cropToPadding="true"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/truck_image_content_description"
            android:id="@+id/my_truck_image"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hello_blank_fragment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_truck_image">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hello_blank_fragment"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/phone" />

        <TextView
            android:id="@+id/view7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/category"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/view7" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="192dp" />

        <TextView
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/open_hours"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/view6" />

        <ImageButton
            android:id="@+id/add_hour_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/add_button"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toTopOf="@id/view3"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/view2" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hours_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="189dp"
            app:layout_constraintTop_toBottomOf="@id/view3">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/menu"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/hours_recycler_view" />

        <ImageButton
            android:id="@+id/add_menu_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/add_button"
            android:src="@drawable/ic_add"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/view5"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/view4" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/menu_items_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view5">

        </android.support.v7.widget.RecyclerView>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:entries="@array/categories"
            app:layout_constraintBottom_toBottomOf="@+id/view6"
            app:layout_constraintEnd_toEndOf="parent" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>